--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,27 +1,31 @@
 /* Sidebar.css */
+
 .sidebar {
-    background-color: #f8f9fa; /* Light background */
-    transition: all 0.3s; /* Smooth transition */
+  transition: background-color 0.3s ease; /* Smooth transition for theme changes */
+}
+
+.sidebar .list-group-item {
+  border: none; /* Remove border for a cleaner look */
+  padding: 15px; /* Adjust padding for a more comfortable touch area */
+  transition: background-color 0.3s ease; /* Smooth transition for hover effect */
+}
+
+.sidebar .list-group-item:hover {
+  background-color: rgba(255, 255, 255, 0.1); /* Light hover effect for dark theme */
+
+}
+
+.sidebar .list-group-item .fa-icon {
+  font-size: 1.2rem; /* Increase icon size */
+}
+
+/* Additional styles for the dark theme */
+
+
+
+/* Responsive design for smaller screens */
+@media (max-width: 768px) {
+  .sidebar {
+    width: 200px;
   }
-  
-  .sidebar .list-group-item {
-    border: none; /* Remove borders */
-    transition: background-color 0.3s; /* Smooth background color transition */
-  }
-  
-  .sidebar .list-group-item:hover {
-    background-color: #e9ecef; /* Background color on hover */
-    color: #495057; /* Text color on hover */
-  }
-  
-  .sidebar .list-group-item .fa-icon {
-    font-size: 1.2rem; /* Increase icon size */
-  }
-  
-  /* Responsive design for smaller screens */
-  @media (max-width: 768px) {
-    .sidebar {
-      width: 200px; /* Reduce width on small screens */
-    }
-  }
-  
+}
